Blackpurl/src/objects/Summary_Card__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Color__c</fullName>
        <label>Block Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Class__c</fullName>
        <label>Icon Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Summary Card</label>
    <pluralLabel>Summary Cards</pluralLabel>
</CustomObject>